# fastapi_test

./: .env  README.md  database.py  fastapi.db  insertdb_ex.py  leopard.yaml  main.py  models.py  pyproject.toml  secret.txt  tiger.yaml
board/: board_crud.py  board_router.py  board_schema.py
user/: user_crud.py  user_router.py  user_schema.py
